--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fishEye</title>
+    <title>FishEye</title>
   </head>
   <body>
     <div id="app" class="text-red-500 text-center text-2xl mt-8">
@@ -13,3 +14,5 @@
     <script type="module" src="/main.js"></script>
   </body>
 </html>
+
+
