init api & fetch data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>FishEye</title>
   </head>
   <body>
+    <main id="main">
+
+    </main>
     <div id="app" class="text-red-500 text-center text-2xl mt-8">
       hello fishEye
     </div>
