--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FishEye</title>
   </head>
-  <body>
-    <main id="main">
+  <body >
+    <header class="flex flex-row justify-between items-center h-20">
+      <img src="assets/images/logo.png" class="h-12" alt="fisheye logo"/>
+      <h1 class="text-old-brick text-3xl">Nos photographes</h1>
+  </header>
+    <main id="main" class="border border-green-700">
+      <section id="#photographer_section" class="grid grid-cols-3 gap-20 mt-10">
 
+      </section>
     </main>
-    <div id="app" class="text-red-500 text-center text-2xl mt-8">
-      hello fishEye
-    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
