--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="../assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FishEye</title>
   </head>
-  <body class="container mx-auto">
+  <body class="container mx-auto" data-page="homepage">
     <header class="flex flex-row justify-between items-center h-20">
-      <img src="assets/images/logo.png" class="h-12" alt="fisheye logo"/>
+      <img src="assets/medias/logo.png" class="h-12" alt="fisheye logo"/>
       <h1 class="text-old-brick text-3xl">Nos photographes</h1>
   </header>
     <main id="main">
