intégration photographe page

--- a/html/photographer.html
+++ b/html/photographer.html
@@ -7,14 +7,14 @@
     <title>Fisheye - photographe</title>
   </head>
   <body data-page="photographer" class="container mx-auto">
-    <header class="flex flex-row justify-between items-center h-20">
-      <img src="../assets/medias/logo.png" class="h-12" />
+    <header class="flex flex-row justify-between items-center h-20 my-10">
+      <a href="../index.html">
+        <img src="../assets/medias/logo.png" alt="Fisheye Home page" class="h-12" />
+      </a>
     </header>
     <main id="main">
-      <section id="photograph-header" class="bg-gray-100 h-75 m-25">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-      </section>
-      <div id="photograph-medias"></div>
+      <section id="photograph-section" class="bg-gray-100 h-75 m-25 rounded"></section>
+      <section id="photograph-medias" class="grid grid-cols-3 gap-20 my-10 justify-items-center"></section>
     </main>
     <div class="hidden" id="contact_modal">
 			<div class="modal rounded-md bg-red-400 w-1/2 flex flex-col items-center justify-between p-9 m-auto">
@@ -34,3 +34,5 @@
     <script type="module" src="/main.js"></script>
   </body>
 </html>
+
+
