--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>FishEye</title>
   </head>
   <body class="container mx-auto" data-page="homepage">
-    <header class="flex flex-row justify-between items-center h-20">
+    <header class="flex flex-row justify-between items-center h-20 mb-28 mt-10">
       <img src="assets/medias/logo.png" class="h-12" alt="fisheye logo"/>
       <h1 class="text-old-brick text-3xl">Nos photographes</h1>
   </header>
     <main id="main">
-      <section id="photographers_section" class="grid grid-cols-3 gap-20 mt-10 justify-items-center"></section>
+      <section id="photographers_section" class="grid grid-cols-3 gap-20 my-10 justify-items-center"></section>
     </main>
     <script type="module" src="/main.js"></script>
   </body>
