--- a/html/photographer.html
+++ b/html/photographer.html
@@ -12,9 +12,10 @@
         <img src="../assets/medias/logo.png" alt="Fisheye Home page" class="h-12" />
       </a>
     </header>
-    <main id="main">
+    <main id="main relative ">
       <section id="photograph-section" class="bg-gray-100 h-75 m-25 rounded"></section>
       <section id="photograph-medias" class="grid grid-cols-3 gap-20 my-10 justify-items-center"></section>
+      <aside id="photograph-aside" class="sticky bottom-0 left-full w-fit"></aside>
     </main>
     <div class="hidden" id="contact_modal">
 			<div class="modal rounded-md bg-red-400 w-1/2 flex flex-col items-center justify-between p-9 m-auto">
@@ -32,6 +33,7 @@
 			</div>
 		</div>
     <script type="module" src="/main.js"></script>
+    <script src="https://kit.fontawesome.com/509d6930d6.js" crossorigin="anonymous"></script>
   </body>
 </html>
 
