html & css lightbox

--- a/html/photographer.html
+++ b/html/photographer.html
@@ -53,6 +53,24 @@
       </div>
     </div>
 
+    <div id="lightbox" class="bg-white bg-opacity-90 absolute top-0 left-0 w-full h-full transition-opacity ease-in-out pointer-events-none">
+      <div id="lightboxContent" class="px-24 py-16 fixed top-0 left-0 w-full min-w-fit right-0 flex justify-center">
+        <button id="lightboxPreviousBtn" class="mx-8 text-6xl text-old-brick">
+          <i class="fa-solid fa-chevron-left"></i>
+        </button>
+        <div id="lightboxContainer" class="relative">
+          <button id="lightboxCloseBtn" class="absolute left-full text-6xl pl-8 text-old-brick">
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+          <img class="w-[1050px] h-[750px] object-cover" src="/assets/medias/195/Architecture_On_a_hill.jpg" alt="test">
+        </div>
+        <button id="lightboxNextBtn" class="mx-8 text-6xl text-old-brick">
+          <i class="fa-solid fa-chevron-right"></i>
+        </button>
+      </div>
+
+    </div>
+
     <script type="module" src="/main.js"></script>
     <script type="module" src="/scripts/utils/contactForm.js"></script>
     <script src="https://kit.fontawesome.com/509d6930d6.js" crossorigin="anonymous"></script>
