--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
       <section id="photographers_section" class="grid grid-cols-3 gap-20 my-10 justify-items-center"></section>
     </main>
     <script type="module" src="/main.js"></script>
+    <!-- <style>
+      @import './style.css';
+   </style> -->
   </body>
 </html>
