--- a/html/photographer.html
+++ b/html/photographer.html
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <div id="lightbox" class="bg-white bg-opacity-90 absolute top-0 left-0 w-full h-full transition-opacity ease-in-out pointer-events-none">
+    <!-- <div id="lightbox" class="lightbox">
       <div id="lightboxContent" class="px-24 py-16 fixed top-0 left-0 w-full min-w-fit right-0 flex justify-center">
         <button id="lightboxPreviousBtn" class="mx-8 text-6xl text-old-brick">
           <i class="fa-solid fa-chevron-left"></i>
@@ -68,12 +68,13 @@
           <i class="fa-solid fa-chevron-right"></i>
         </button>
       </div>
-
-    </div>
+    </div> -->
 
     <script type="module" src="/main.js"></script>
     <script type="module" src="/scripts/utils/contactForm.js"></script>
     <script src="https://kit.fontawesome.com/509d6930d6.js" crossorigin="anonymous"></script>
+    <!-- <style>
+      @import './style.css';
+   </style> -->
   </body>
 </html>
-
