--- a/html/photographer.html
+++ b/html/photographer.html
@@ -20,9 +20,7 @@
       
       <main id="main relative">
         <section id="photograph-section" class="bg-gray-100 h-75 m-25 rounded mb-10"></section>
-        <div id="filtersOptions" class="mb-10">
-          
-          </div>
+        <div id="filtersOptions" class="mb-10 flex items-center"></div>
         <section id="photograph-medias" class="grid grid-cols-3 gap-20 mb-10 justify-items-center"></section>
         <aside id="photograph-aside" class="sticky bottom-0 left-full w-fit"></aside>
       </main>
